Fix misalignment of results category headers

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1981,6 +1981,7 @@ h4 .result-indicator::before {
     transform: translateX(-50%);
     position: relative;
     left: 50%;
+    margin: 6rem 0 1rem 0;
   }
 
   .results-header > img {
